--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,14 +5,21 @@ phases:
     runtime-versions:
       nodejs: 14
     commands:
+      - echo Installing dependencies...
       - npm install
+
   build:
     commands:
+      - echo Building the React app...
       - npm run build
+
   post_build:
     commands:
-      - aws s3 sync build/ s3://reactappbucket --delete 
+      - echo Deploying to S3...
+      - aws s3 sync build/ s3://reactappbucket --delete
 
 artifacts:
   files:
     - '**/*'
+  base-directory: build
+
