--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,20 +3,25 @@ version: 0.2
 phases:
   install:
     runtime-versions:
-      nodejs: 16
+      nodejs: 14
     commands:
       - echo Installing dependencies...
       - npm install
+
   build:
     commands:
       - echo Building the project...
       - npm run build
+
   post_build:
     commands:
-      - echo Deploying to S3...
-      - aws s3 sync build/ s3://your-bucket-name --delete
+      - echo Build completed successfully.
+
 artifacts:
   files:
     - '**/*'
-  base-directory: build
+    - '!**/node_modules/**'
 
+cache:
+  paths:
+    - 'node_modules/**/*'
