--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,11 @@ phases:
       - echo Installing dependencies...
       - npm install
 
+  pre_build:
+    commands:
+      - echo Running tests...
+      - npm test   # Make sure you have a test script in package.json
+
   build:
     commands:
       - echo Building the project...
@@ -15,7 +20,7 @@ phases:
 
   post_build:
     commands:
-      - echo Build completed successfully.
+      - echo Build and tests completed successfully.
 
 artifacts:
   files:
@@ -25,3 +30,4 @@ artifacts:
 cache:
   paths:
     - 'node_modules/**/*'
+
