--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,11 @@ phases:
       - echo Installing dependencies...
       - npm install
 
+  pre_build:
+    commands:
+      - echo Running tests...
+      - npm test  
+
   build:
     commands:
       - echo Building the project...
@@ -15,7 +20,7 @@ phases:
 
   post_build:
     commands:
-      - echo Build completed successfully.
+      - echo Build and tests completed successfully.
 
 artifacts:
   files:
